--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "NODE_ENV=production node server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
@@ -34,7 +34,8 @@
     "slugify": "^1.3.4",
     "stripe": "^7.0.0",
     "validator": "^10.11.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -45,7 +46,6 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0"
   },
   "engines": {
